tests/errors/semantic/blocking/NUMPY_WHERE_SINGLE_ARGUMENT.py
# pylint: disable=missing-function-docstring, missing-module-docstring/
from numpy import where, zeros
arr = zeros(10)
a = where(arr == 0)

